--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Orders/Checkout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Orders/Checkout.cshtml
@@ -3,27 +3,29 @@
 @{
     ViewBag.Title = "Checkout";
 }
+@Styles.Render("~/Content/css/check-out.css")
+
 
 <div class="sign-up container">
-        <div class="md-form p-2">
-            <h1 class="text-center text-uppercase purple-text font-weight-bold">Confirm Order Info</h1>
-        </div>
-        <div class="md-form">
-            <label for="fullname">Fullname:</label>
-            <input name="fullname" type="text" class="form-control" id="fullname" value="@((Session["User"] as User).Fullname)">
-        </div>
-        <div class="md-form">
-            <label for="phone">Phone:</label>
-            <input name="phone" type="text" class="form-control" id="phone" value="@((Session["User"] as User).Phone)">
-        </div>
-        <div class="md-form">
-            <label for="email">Email address:</label>
-            <input name="email" type="email" class="form-control" id="email" value="@((Session["User"] as User).Email)">
-        </div>
-        <div class="md-form">
-            <label for="address">Address:</label>
-            <input name="address" type="text" class="form-control" id="address" value="@((Session["User"] as User).Address)">
-        </div>
-        <a href="/Orders/Checkout1"><button class="btn btn-purple rounded-pill float-right">Comfirm Checkout</button></a>
-  
+    <div class="md-form p-2">
+        <h1 class="text-center text-uppercase purple-text font-weight-bold">Confirm Order Info</h1>
+    </div>
+    <div class="md-form">
+        <label for="fullname">Fullname:</label>
+        <input name="fullname" type="text" class="form-control" id="fullname" value="@((Session["User"] as User).Fullname)">
+    </div>
+    <div class="md-form">
+        <label for="phone">Phone:</label>
+        <input name="phone" type="text" class="form-control" id="phone" value="@((Session["User"] as User).Phone)">
+    </div>
+    <div class="md-form">
+        <label for="email">Email address:</label>
+        <input name="email" type="email" class="form-control" id="email" value="@((Session["User"] as User).Email)">
+    </div>
+    <div class="md-form">
+        <label for="address">Address:</label>
+        <input name="address" type="text" class="form-control" id="address" value="@((Session["User"] as User).Address)">
+    </div>
+    <a href="/Orders/"><button class="btn btn-purple rounded-pill float-left">Back to Cart</button></a>
+    <a href="/Orders/Checkout1" class="pb-5"><button class="btn btn-purple rounded-pill float-right">Comfirm Checkout</button></a>
 </div>
