--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -120,13 +120,13 @@
     </div>
     @{ string path = HttpContext.Current.Request.Url.AbsolutePath; }
 
-    @if (!path.Contains("Home/Contact") && !path.Contains("Users") && !path.Contains("Orders"))
+    @if (!path.Contains("Home/Contact") && !path.Contains("Users") && !path.Contains("Orders") && !path.Contains("ProductDetails"))
     {
         <div class="text-center">
-            <a href="Products?minimunPrice=10000000&maximumPrice=20000000"><button class="btn-purple rounded-pill btn purple-gradient text-dark">10.000.000 - 20.000.000</button></a>
-            <a href="Products?minimunPrice=20000000&maximumPrice=30000000"><button class="btn-purple rounded-pill btn purple-gradient text-dark">20.000.000 - 30.000.000</button></a>
-            <a href="Products?minimunPrice=30000000&maximumPrice=40000000"><button class="btn-purple rounded-pill btn purple-gradient text-dark">30.000.000 - 50.000.000</button></a>
-            <a href="Products?minimunPrice=50000000&maximumPrice=200000000"><button class="btn-purple rounded-pill btn purple-gradient text-dark">50.000.000 - 200.000.000</button></a>
+            <a href="Products?minimunPrice=10000000&maximumPrice=20000000"><button class="btn-purple rounded-pill btn purple-gradient text-white">10.000.000 - 20.000.000</button></a>
+            <a href="Products?minimunPrice=20000000&maximumPrice=30000000"><button class="btn-purple rounded-pill btn purple-gradient text-white">20.000.000 - 30.000.000</button></a>
+            <a href="Products?minimunPrice=30000000&maximumPrice=40000000"><button class="btn-purple rounded-pill btn purple-gradient text-white">30.000.000 - 50.000.000</button></a>
+            <a href="Products?minimunPrice=50000000&maximumPrice=200000000"><button class="btn-purple rounded-pill btn purple-gradient text-white">50.000.000 - 200.000.000</button></a>
         </div>
     }
 
