--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Users/Login.cshtml
@@ -227,6 +227,8 @@
         <p class="text-center">
             Not a member?
             @Html.ActionLink("Sign Up", "SignUp", "Users")
+             or 
+            @Html.ActionLink("Reset Password", "Reset", "Users")
         </p>
         <div>
             <button class="loginBtn loginBtn--facebook">
