Update profile + reset password

--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
                 </div>
                 <!--Card content-->
                 <div class="card-body">
-                    <h4 class="card-title">@p.Name</h4>
+                    <h4 class="card-title text-left" style="width:300px; height: 50px;">@p.Name</h4>
                     <h5>
                         @if (p.Discount > 1)
                         {
@@ -69,15 +69,17 @@
 
                     </h5>
                     <hr>
-                    <p class="card-text purple-text">
-                        @p.Features
-                    </p>
+                    <div class="card-title" style="width:300px; height: 120px;">
+                        <p class="card-text purple-text">
+                            @p.Features
+                        </p>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <a href="/ProductDetails/Details?id=@p.ProductDetailID"><button type="button" class="btn btn-pink btn-md rounded-pill">Readmore</button></a>
+                        <a href="/Orders/Cart?prodID=@p.ID"><button class="btn btn-pink btn-md rounded-pill">Add Cart</button></a>
+                    </div>
                 </div>
-                <div class="text-center">
-                    <a href="/ProductDetails/Details?id=@p.ProductDetailID"><button type="button" class="btn btn-pink btn-md rounded-pill">Readmore</button></a>
-                    <a href="/Orders/Cart?prodID=@p.ID"><button class="btn btn-pink btn-md rounded-pill">Add Cart</button></a>
-                </div>
-            </div>
             <!-- Card -->
         </div>
 
@@ -86,7 +88,6 @@
 
 </div>
 Page @(ViewBag.Home.Count < ViewBag.Home.PageNumber ? 0 : ViewBag.Home.PageNumber) of @ViewBag.Home.PageCount
-
 @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort })) 
 
 
