--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Search/Index.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Search/Index.cshtml
@@ -17,27 +17,32 @@ else
     <div class="row row-cols-1 row-cols-md-3">
         @foreach (var p in Model)
         {
-            foreach (var imange in p.Images)
-            {
-                if (p.ID == imange.ProductID)
-                {
                     <div class="col mb-4">
                         <!-- Card -->
                         <div class="card card-product">
                             <!--Card image-->
                             <div class="view overlay">
+                                <div class="carousel slide" data-ride="carousel" data-interval="2000" style="width:350px; height: 350px;">
+                                    <div class="carousel-inner">
+                                        @foreach (var imange in p.Images)
+                                        {
+                                            if (p.ID == imange.ProductID)
+                                            {
 
-                                <a href="/ProductDetails/Details/@p.ProductDetailID">
-                                    <img class="card-img-top"
-                                         src="@imange.image"
-                                         alt="Card image cap">
-                                    <div class="mask rgba-white-slight"></div>
+                                                <div class="carousel-item @(imange == p.Images.First() ? "active" : "")">
+                                                    <img class="card-img-top" src="@imange.image">
+                                                    @*style=" padding-left: 40px; padding-top: 40px; width: 330px;*@
+                                                </div>
 
-                                </a>
+                                            }
+                                        }
+                                    </div>
+
+                                </div>
                             </div>
                             <!--Card content-->
                             <div class="card-body">
-                                <h4 class="card-title">@Html.DisplayName(p.Name)</h4>
+                                <h4 class="card-title" style="width:300px; height: 50px;">@Html.DisplayName(p.Name)</h4>
                                 <h5>
                                     @if (p.Discount > 1)
                                     {
@@ -50,21 +55,21 @@ else
 
                                 </h5>
                                 <hr>
-                                <p class="card-text purple-text">
-                                    @Html.DisplayName(p.Features)
-                                </p>
+                                <div class="card-title" style="width:300px; height: 120px;">
+                                    <p class="card-text purple-text">
+                                        @Html.DisplayName(p.Features)
+                                    </p>
+                                </div>
                             </div>
-                            <div class="text-center">
+                                <div class="text-center">
 
-                                <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
-                                <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
+                                    <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Readmore", "Details", "ProductDetails", new { id = p.ProductDetailID }, null)</button>
+                                    <button class="btn btn-pink btn-md rounded-pill">@Html.ActionLink("Add Cart", "Cart", "Orders", new { prodID = p.ID }, null)</button>
+                                </div>
                             </div>
-                        </div>
                         <!-- Card -->
                     </div>
-                }
-
-            }
+              
         }
 
     </div>
