--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -19,11 +19,17 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" id="nav">
-        <div class="nav-link waves-effect waves-light">@Html.ActionLink("Smart Lap", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</div>
+        <div class="nav-link waves-effect waves-light ">
+            <div class="ml-5 text-center">
+                
+                    <img class="ml-5" src="~/img/logo.jpg">@Html.ActionLink("Smart Lap", "Index", "Home", new { area = "" }, new { @class = "navbar-brand purple-text text-uppercase font-weight-bold " })
+                 
+            </div>
+        </div>
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#menu">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="container-lg">
+        <div class="container-lg ml-5">
             <div class="collapse navbar-collapse text-center" id="menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">@Html.ActionLink("Asus", "Index", "Products", new { brand = 1 }, new { @class = "nav-link" })</li>
@@ -34,7 +40,7 @@
 
 
 
-                    @if (Session["User"] == null )
+                    @if (Session["User"] == null)
                     {
                         <li class="nav-item">@Html.ActionLink("Login", "Login", "Users", null, new { @class = "nav-link" })</li>
                         <li class="nav-item">@Html.ActionLink("Sign Up", "SignUp", "Users", null, new { @class = "nav-link" })</li>
@@ -71,7 +77,7 @@
                             <div class="dropdown show">
                                 <img class="showUser rounded-circle" onerror="this.src='https://png.pngtree.com/png-vector/20190710/ourmid/pngtree-user-vector-avatar-png-image_1541962.jpg';" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuLink" src="@((Session["User"] as User).Image)" alt="Alternate Text" />
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    @Html.ActionLink("Logout", "Logout", "Users", null, new { @class = "nav-link" })
+                                    @Html.ActionLink("Logout", "Logout", "Users", null, new { @class = "nav-link text-center" })
                                     <a href="/Users/Edit/@(((User)Session["User"]).ID)">Update Profile</a>
                                 </div>
                             </div>
