--- a/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
+++ b/SaleLaptopSystem/SaleLaptopSystem/Views/Shared/_Layout.cshtml
@@ -21,9 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" id="nav">
         <div class="nav-link waves-effect waves-light ">
             <div class="ml-5 text-center">
-                
-                    <img class="ml-5" src="~/img/logo.jpg">@Html.ActionLink("Smart Lap", "Index", "Home", new { area = "" }, new { @class = "navbar-brand purple-text text-uppercase font-weight-bold " })
-                 
+                <a class="navbar-brand purple-text text-uppercase font-weight-bold" href="/"><img class="ml-5" src="~/img/logo.jpg">Smart Lap</a>
             </div>
         </div>
         <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#menu">
@@ -79,6 +77,7 @@
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     @Html.ActionLink("Logout", "Logout", "Users", null, new { @class = "nav-link text-center" })
                                     <a href="/Users/Edit/@(((User)Session["User"]).ID)">Update Profile</a>
+                                    <a href="/Orders/History">Purchase History</a>
                                 </div>
                             </div>
                         </li>
